# scraping

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  routes.py
app/cache/: __init__.py  store.py
app/models/: __init__.py  enums.py  shipment.py
app/observability/: __init__.py  logging.py
app/orchestrator/: __init__.py  consulta.py  lote.py
app/scraper/: __init__.py  aereo.py  base.py  browser.py  captcha.py  dispatcher.py  domain.py  fixture_html.py  maritimo.py  portal.py  terrestre.py
docs/: BACKLOG-DESARROLLO.md  GUIA-FASTAPI.md  INTEGRACION-API-TICA.md  INTEGRACION-SCRAPPING-DOKKA-TICA.md  PASO-A-PRODUCCION-TICA.md  PROCESO-CONSULTA-TICA-PASO-A-PASO.md  README.md  SPRINT-0-CIERRE.md  SPRINT-1-AVANCES.md  SPRINT-1-CONTRATO-API.md  SPRINT-2-AVANCES.md  SPRINT-3-AVANCES.md  SPRINT-4-AVANCES.md  SPRINT-5-AVANCES.md  SPRINT-6-AVANCES.md  TAREAS-DOKKA-SCRAPPING.md
tests/: __init__.py  test_aereo.py  test_api.py  test_browser.py  test_cache.py  test_config.py  test_logging.py  test_lote.py  test_maritimo.py  test_models.py  test_orchestrator.py  test_portal.py  test_strategies.py  test_terrestre.py
tests/fixtures/aereo/: README.md  madre_hijo_ambiguo.html  ok.html  sin_arribo.html
tests/fixtures/aereo/ok_hawb/: 01_resultado_conocimiento.html  02_master.html  03_lineas.html  04_afectaciones_stock.html  05_movimiento.html  07_duas.html  (+2 more)
tests/fixtures/maritimo/: README.md
tools/: capturar_fixtures_aereo.py  capturar_fixtures_maritimo.py
(+30 files in other folders)
