[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dokka-tica-scraper"
version = "0.1.0"
description = "Microservicio asincrono para consultar datos publicos de TICA."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "playwright>=1.49,<2.0",
    "structlog>=24.4,<30.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "mypy>=1.14,<2.0",
    "pytest>=8.3,<10.0",
    "pytest-asyncio>=0.25,<2.0",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app"]
